fix alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1139,6 +1139,7 @@ p.headText {
 	line-height: 150%;
 	/* identical to box height, or 42px */
 	color: #FFFFFF;
+	text-align: center;
 }
 
 .customerTablerow {
@@ -1156,12 +1157,28 @@ p.headText {
 }
 
 p.paraText {
+	text-align: center;
+  position: absolute;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 24px;
-	line-height: 29px;
-	letter-spacing: 0.05em;
 	color: #A7A7A7;
+}
+
+.justDiv {
+	margin-left: 5%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	align-content: center;
+}
+
+.justDivLast {
+	padding-left: 10%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	align-content: center;
 }
 
 .customerTable {
@@ -1184,7 +1201,7 @@ p.headTextcenter {
 	font-size: 28px;
 	line-height: 150%;
 	color: #FFFFFF;
-	text-align: end;
+	text-align: center;
 }
 
 p.paralast {
@@ -1194,7 +1211,7 @@ p.paralast {
 	line-height: 29px;
 	letter-spacing: 0.05em;
 	color: #A7A7A7;
-	text-align: end;
+	/* text-align: end; */
 }
 
 /* pop up start */
